@@ -1,6 +1,7 @@
 v2.4.1 (2019.11.xx)
   - (Windows/Linux/Android/OSX) Wait up to 10 seconds for IPv4 network connectivity before executing startup discovery tasks
   - (Linux/OSX) Wait up to one minute for IPv4 network connectivity before executing wakeup discovery tasks
+  - Report a fixed length (32KiB) stream chunk size to Kodi regardless of "DVR stream read chunk size" setting value
 
 v2.4.0 (2019.11.01)
   - Update SQLite database engine to version 3.30.1
